--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>My Personal Introduction</title>
 <style>
 body {
-background-color: #1a1a2a;
+background-color: #d4d9dc;
 }
 h1 {
 color: #7f8690;
