--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <title>My Personal Introduction</title>
 <style>
 body {
-background-color: #d4d9dc;
+background-color: #675d6f;
 }
 h1 {
 color: #7f8690;
 }
 p {
-color: #252d2b;
+color: #d4d9dc;
 }
  </style>
  </head>
