--- a/CaseyDraper_gradebook.html
+++ b/CaseyDraper_gradebook.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Gradebook</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 80%;
+            margin: 20px auto;
+        }
+        th, td {
+            border: 1px solid #999;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        body {
+            font-family: Arial, sans-serif;
+        }
+    </style>
+</head>
+<body>
+    <h1 style="text-align:center;">Gradebook</h1>
+    <table id="gradebook">
+        <thead>
+            <tr>
+                <th>Student Name</th>
+                <th>Assignment 1</th>
+                <th>Assignment 2</th>
+                <th>Assignment 3</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Rows will be dynamically added later -->
+        </tbody>
+    </table>
+    <script src="gradebook.js"></script>
+</body>
+</html>
 
